syntax = "proto3";

option go_package = "./pb";

import "google/protobuf/any.proto";

package gserver;

// 路由转发相关proto

// 路由转发给玩家的消息
// server -> otherserver -> player
message RoutePlayerMessage {
  string error = 1; // 错误码
  int64 toPlayerId = 2; // 玩家id
  int32 packetCommand = 3; // 消息号
  bool directSendClient = 4; // 是否直接转发给客户端
  int64 pendingMessageId = 5; // 待处理消息id
  google.protobuf.Any packetData = 6; // 转发的消息
}

// 路由转发玩家的公会请求消息
// server -> otherserver -> guild
message GuildRoutePlayerMessageReq {
  int64 fromPlayerId = 1; // 玩家id
  int64 fromGuildId = 2;  // 玩家公会id
  int32 fromServerId = 3; // 玩家当前所在服务器id
  string fromPlayerName = 4; // 玩家名
  int32 packetCommand = 5; // 消息号
  google.protobuf.Any packetData = 6; // 消息内容
}